--- a/level 26/homework/homework.html
+++ b/level 26/homework/homework.html
@@ -1,27 +1,27 @@
 <form>
 
-<h1>scan for:</h1>
+    <h1>scan for:</h1>
 
-<input type="text"
+    <input type="text">
 
-<h2>fuly-qualified domain name:</h2>
+    <h2>fuly-qualified domain name:</h2>
 
-<input type="text"
+    <input type="text">
 
-<h3>organization unit:</h3>
+    <h3>organization unit:</h3>
 
-<input type="text"
+    <input type="text">
 
-<h4>dormain controller:</h4>
+    <h4>dormain controller:</h4>
 
-<input type="text"
+    <input type="text">
 
-<h5>username:</h5>
+    <h5>username:</h5>
 
-<input type="text"
+    <input type="text">
 
-<h6>password:</h6>
+    <h6>password:</h6>
 
-<input type="text"
+    <input type="text">
 
 </form>
