--- a/level 06/homework/index.html
+++ b/level 06/homework/index.html
@@ -1,8 +1,12 @@
-<P>მე მქვია გიორგი რუსიშვილი მე ვარ 13 წლის მე მიყვარს პროგრამირება დავდივარ გოაში
-    და ვტამაშობ ფეხბურტს
-</P>
-
-<button>click me</button>
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>me mqvia giorgi var 13 wlis </p>
+    <button>click me</button>
+</body>
+</html>
