--- a/level 10/homework/homework.html
+++ b/level 10/homework/homework.html
@@ -1,35 +1,17 @@
-<!--
-<p><b>გამარჯობა ქვეყანა</b></p>
-<p><i>მეორეჯელ გამარჯობა ქვეყანა</i><p>
-<p><u>მესამეჯელ გამარჯობა ქვეყანა</u><p> -->
-
-<p><strong><b><i><em><u>GOA BEST</u></em></i></b></strong></p>
-
-<!--<strong>HI</strong>-->
-<!--<em>Hello</em>-->
-<!--
-    b-bold-მუქი
-    i-italic-დახრილი
-    u-underline-ქვედახაზი
-    atrong-ძლიერი== b
-    em-emphasis == i
--->
-
-
-<p>hello</p>
-<buton>click me</buton>
-<h1>hello h1</h1>
-<h2>hello h2</h2>
-<h3>hello h3</h3>
-<h4>hello h4</h4>
-<h5>hello h5</h5>
-<h6>hello h6</h6>
-<strong>this is strong</strong>
-<b>this is b</b>
-<i>this is i</i>
-<u>this is u</u>
-<em>this is em</em>
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>georgia</h1>
+    <p><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum suscipit eos voluptates consequatur nesciunt voluptatum, quisquam debitis obcaecati ducimus sapiente.</b></p>
+    <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto facilis qui maxime quos veritatis dolores.</i></p>
+    <p><u>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla eligendi, animi expedita pariatur odio eaque?</u></p>
+    <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officia facilis nemo est praesentium ipsam.</strong></p>
+    <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus consequuntur est quae dicta, iusto maxime?</em></p>
+    <img src="https://t3.ftcdn.net/jpg/01/24/38/78/360_F_124387887_RwQoIDLzHT54hUqR7jYsaynYeuA4AD1S.jpg" alt="">
+</body>
+</html>
