--- a/level 12/homevork/homework.html
+++ b/level 12/homevork/homework.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis iusto doloribus sit, culpa nemo laudantium repellat molestiae eius inventore error vero? Natus ad sapiente labore aliquid numquam et voluptatibus reiciendis magni distinctio dicta iste possimus debitis laudantium saepe exercitationem, aliquam cupiditate maiores provident, quae repellendus assumenda ratione. Aut, ex. Porro!</b></p>
+    <img src="download.jpeg" alt="" width="500px" height="400px">
+    <img src="istockphoto-1160446488-612x612.jpg" alt="">
+    <a href="homework1.html">go to 2 site</a>
+    <a href="https://en.wikipedia.org/wiki/History_of_Georgia_(country)">click this to know more</a>
 </body>
 </html>
