--- a/level 14/homework/homework.html
+++ b/level 14/homework/homework.html
@@ -1,40 +1,38 @@
-<h1>nested list</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+</head>
+<body>
+      <h1>Nested List</h1>
+      <ol>
+            <li>
+                  chocolate  
+                  <ul>
+                        <li>dairy milk</li>
+                        <li>boumvile</li>
+                        <li>munchs</li>
+                  </ul>
+            </li>
+            <li>
+                  Games
+                  <ul>
+                        <li>cricket</li>
+                        <li>hockey</li>
+                        <li>football</li>
+                  </ul>
+            </li>
+            <li>
+                  fruit
+                  <ul>
+                        <li>apple</li>
+                        <li>orange</li>
+                        <li>grapes</li>
+                  </ul>
+            </li>
+      </ol>
 
-<p>
-1. chocolate
-
-      . <br> dairy milk
-      . <br> bounvile
-      . <br> munch
-
-2. games
-
-. <br> cricket
-. <br> hokey
-. <br> football
-
-3. fruit
-
-. <br> apple
-. <br> orange
-. <br> grapes
-
-</p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
+</html>
